OrderData refactor