@@ -21,48 +21,35 @@ import java.util.function.Function;
 //TODO use last viewed item in bazaar to help with finding accurate price instead of just chat message
 @Slf4j
 public class OrderData implements BUListener {
-    public String getProductID() {
-        return productID;
-    }
 
-    //name of the item in game
+    private static final double DEFAULT_TOLERANCE = 0.9;
+    private static final double TOTAL_PRICE_ROUNDING_THRESHOLD = 10000;
+
+    public enum statuses {SET, FILLED, OUTDATED, COMPETITIVE, MATCHED}
+
     @Getter
-    private final String name;
-    //hypixel's code for the product
-    private final String productID;
-
-    public int getIndex(){return BUConfig.get().watchedOrders.indexOf(this);}
-
-    public String getGeneralInfo(){
-        String str = "(name: " + name + "[" + getIndex() + "]" + ", price:" + priceInfo.getPrice() + ", volume: " + volume;
-        if(amountClaimed != 0)
-            str += ", amount claimed: " + amountClaimed;
-        str += ", type: " + priceInfo.getPriceType().getString() + " order";
-        if(fillStatus == statuses.FILLED)
-            str += ", status: " + fillStatus;
-        str +=  ")";
-        return str;
-    }
-
-    public enum statuses{SET,FILLED, OUTDATED, COMPETITIVE, MATCHED}
-
-    //only used to determine if order is set or filled, not outdated, competitive, or matched
-    @Setter @Getter
-    private statuses fillStatus;
+    private final String name; //name of the item in game
+    @Getter
+    private final String productID; //hypixel's code for the product
+    @Getter
+    @Setter
+    private statuses fillStatus; //only used to determine if order is set or filled, not outdated, competitive, or matched
     @Getter
     private final Integer volume;
-
-    @Setter
     @Getter
+    @Setter
     private int amountClaimed = 0;
-    @Setter
     @Getter
+    @Setter
     private int amountFilled = 0;
-    @Getter @Setter
+    @Getter
+    @Setter
     private double tolerance;
     @Getter
-    private OrderPriceInfo priceInfo;
-    public OrderItemInfo itemInfo;
+    private final OrderPriceInfo priceInfo;
+    @Getter
+    @Setter
+    private OrderItemInfo itemInfo;
 
     //When finding item price, it can round to the nearest coin sometimes, so tolerance is needed for price calculations
     public OrderData(String name, Integer volume, OrderPriceInfo priceInfo) {
@@ -73,26 +60,46 @@ public class OrderData implements BUListener {
         this.priceInfo = priceInfo;
         this.tolerance = calculateTolerance();
 
-        if(productID == null && name != null){
+        if (productID == null && name != null) {
             Util.notifyError("Product ID for " + name + " is null. This may cause issues", null);
-            return;
         }
     }
 
-    private double calculateTolerance(){
+    private double calculateTolerance() {
         //default tolerance
-        if(priceInfo.getPrice() == null || volume == null)
-            return 0.9;
+        if (priceInfo.getPrice() == null || volume == null) {
+            return DEFAULT_TOLERANCE;
+        }
         //doesnt round prices when total is over 10k
-        if(priceInfo.getPrice()*volume < 10000)
+        if (priceInfo.getPrice() * volume < TOTAL_PRICE_ROUNDING_THRESHOLD) {
             return 0;
-        else{
-            double priceMaximumInaccuracy = .9 / volume; //0.9 coins is the most that it can be off per unit and not show in places where it rounds
+        } else {
+            double priceMaximumInaccuracy = DEFAULT_TOLERANCE / volume; //0.9 coins is the most that it can be off per unit and not show in places where it rounds
             return (Math.round(priceMaximumInaccuracy * 10)) / 10.0;
         }
     }
 
-    public void flipItem(double newPrice){
+    public int getIndex() {
+        return BUConfig.get().watchedOrders.indexOf(this);
+    }
+
+    public String getGeneralInfo() {
+        StringBuilder sb = new StringBuilder();
+        sb.append("(name: ").append(name).append("[").append(getIndex()).append("]")
+            .append(", price:").append(priceInfo.getPrice())
+            .append(", volume: ").append(volume);
+        if (amountClaimed != 0) {
+            sb.append(", amount claimed: ").append(amountClaimed);
+        }
+        sb.append(", type: ").append(priceInfo.getPriceType().getString()).append(" order");
+        if (fillStatus == statuses.FILLED) {
+            sb.append(", status: ").append(fillStatus);
+        }
+        sb.append(")");
+        return sb.toString();
+    }
+
+    public void flipItem(double newPrice) {
         priceInfo.flipPrices(newPrice);
         this.amountFilled = 0;
         this.fillStatus = statuses.SET;
@@ -104,34 +111,40 @@ public class OrderData implements BUListener {
     }
 
     //run by ex: getVariables((item) -> item.getPrice()) orItemData.getVariables(ItemData::getPrice);
-    public static <T> ArrayList<T> getVariables(Function<OrderData, T> variable){
-        ArrayList<T> variables = new ArrayList<>();
-        for(OrderData item : BUConfig.get().watchedOrders){
-            variables.add(variable.apply(item));
-        }
-        return variables;
+    public static <T> List<T> getVariables(Function<OrderData, T> variable) {
+        return BUConfig.get().watchedOrders.stream()
+            .map(variable)
+            .toList();
     }
 
-    public boolean equals(OrderData order, boolean isStrict) {
-        String otherOrderName = order.getName();
-        Double otherOrderPrice = order.getPriceInfo().getPrice();
-        Integer otherOrderVolume = order.getVolume();
-        int otherOrderAmountUnclaimed = order.getAmountFilled()-order.getAmountClaimed();
-        OrderPriceInfo.priceTypes priceType = order.getPriceInfo().getPriceType();
+    public boolean isSimilarTo(OrderData other, boolean isStrict) {
+        String otherOrderName = other.getName();
+        Double otherOrderPrice = other.getPriceInfo().getPrice();
+        Integer otherOrderVolume = other.getVolume();
+        int otherOrderAmountUnclaimed = other.getAmountFilled() - other.getAmountClaimed();
+        OrderPriceInfo.priceTypes priceType = other.getPriceInfo().getPriceType();
 
         if (isStrict) {
-            return (cantCompare(this.getPriceInfo().getPrice(), otherOrderPrice) || this.isSimilarPrice(otherOrderPrice)) &&
-                    (cantCompare(this.getVolume(), otherOrderVolume) || this.getVolume().equals(otherOrderVolume)) &&
-                    (cantCompare(this.getName(), otherOrderName) || this.getName().equalsIgnoreCase(otherOrderName)) &&
-                    (cantCompare(this.getPriceInfo().getPriceType(), priceType) || this.getPriceInfo().getPriceType() == priceType);
+            return isStrictlySimilarTo(otherOrderName, otherOrderPrice, otherOrderVolume, priceType);
         }
-        return (cantCompare(this.getPriceInfo().getPrice(), otherOrderPrice) || this.isSimilarPrice(otherOrderPrice)) &&
-                (cantCompare(this.getVolume(), otherOrderVolume) || Math.abs(this.getVolume() - otherOrderVolume) <= (0.05 * otherOrderVolume) || this.getVolume().equals(otherOrderAmountUnclaimed)) && // sometimes the only volume that can be found is the amount that is unclaimed, like in FlipHelper
-                (cantCompare(this.getName(), otherOrderName) || this.getName().equalsIgnoreCase(otherOrderName)) &&
-                (cantCompare(this.getPriceInfo().getPriceType(), priceType) || this.getPriceInfo().getPriceType() == priceType);
+        return isLooselySimilarTo(otherOrderName, otherOrderPrice, otherOrderVolume, otherOrderAmountUnclaimed, priceType);
     }
 
-    private boolean cantCompare(Object... objects) {
+    private boolean isStrictlySimilarTo(String otherOrderName, Double otherOrderPrice, Integer otherOrderVolume, OrderPriceInfo.priceTypes priceType) {
+        return (areAnyNull(this.getPriceInfo().getPrice(), otherOrderPrice) || this.isSimilarPrice(otherOrderPrice)) &&
+            (areAnyNull(this.getVolume(), otherOrderVolume) || this.getVolume().equals(otherOrderVolume)) &&
+            (areAnyNull(this.getName(), otherOrderName) || this.getName().equalsIgnoreCase(otherOrderName)) &&
+            (areAnyNull(this.getPriceInfo().getPriceType(), priceType) || this.getPriceInfo().getPriceType() == priceType);
+    }
+
+    private boolean isLooselySimilarTo(String otherOrderName, Double otherOrderPrice, Integer otherOrderVolume, int otherOrderAmountUnclaimed, OrderPriceInfo.priceTypes priceType) {
+        return (areAnyNull(this.getPriceInfo().getPrice(), otherOrderPrice) || this.isSimilarPrice(otherOrderPrice)) &&
+            (areAnyNull(this.getVolume(), otherOrderVolume) || Math.abs(this.getVolume() - otherOrderVolume) <= (0.05 * otherOrderVolume) || this.getVolume().equals(otherOrderAmountUnclaimed)) && // sometimes the only volume that can be found is the amount that is unclaimed, like in FlipHelper
+            (areAnyNull(this.getName(), otherOrderName) || this.getName().equalsIgnoreCase(otherOrderName)) &&
+            (areAnyNull(this.getPriceInfo().getPriceType(), priceType) || this.getPriceInfo().getPriceType() == priceType);
+    }
+
+    private boolean areAnyNull(Object... objects) {
         for (Object object : objects) {
             if (object == null) {
                 return true;
@@ -148,19 +161,19 @@ public class OrderData implements BUListener {
         if (itemList.isEmpty()) {
             return null;
         }
-        return itemList.getFirst();
+        return itemList.get(0);
     }
 
     public List<OrderData> findAllMatchesInList(List<OrderData> list) {
         List<OrderData> itemList = new ArrayList<>();
-        for(OrderData item : list){
-            if(this.equals(item, true)){
+        for (OrderData item : list) {
+            if (this.isSimilarTo(item, true)) {
                 itemList.add(item);
             }
         }
         if (itemList.isEmpty()) {
-            for(OrderData item : list){
-                if(this.equals(item, false)){
+            for (OrderData item : list) {
+                if (this.isSimilarTo(item, false)) {
                     itemList.add(item);
                 }
             }
@@ -171,27 +184,22 @@ public class OrderData implements BUListener {
     /* Used for when there are duplicate matches found and the best should be chosen to use.
     Typically, volume is the variable that is different, but it can also be price
     */
-    private OrderData findBestMatch(List<OrderData> itemList) {
-        OrderData bestMatch = itemList.getFirst();
-
-        for (OrderData item : itemList) {
-            if (getVolumeThenPriceComparator().compare(item, bestMatch) < 0) {
-                bestMatch = item;
-            }
-        }
-        return bestMatch;
+    private OrderData findBestMatch(List<OrderData> list) {
+        return list.stream()
+            .min(getVolumeThenPriceComparator())
+            .orElse(list.get(0));
     }
 
     private Comparator<OrderData> getVolumeThenPriceComparator() {
         Comparator<OrderData> volumeComparator = Comparator.comparingDouble(order -> {
-            if (cantCompare(this.getVolume(), order.getVolume())) {
+            if (areAnyNull(this.getVolume(), order.getVolume())) {
                 return Double.MAX_VALUE;
             }
             return Math.abs(order.getVolume() - this.getVolume());
         });
 
         Comparator<OrderData> priceComparator = Comparator.comparingDouble(order -> {
-            if (cantCompare(this.getPriceInfo().getPrice(), order.getPriceInfo().getPrice())) {
+            if (areAnyNull(this.getPriceInfo().getPrice(), order.getPriceInfo().getPrice())) {
                 return Double.MAX_VALUE;
             }
             return Math.abs(order.getPriceInfo().getPrice() - this.getPriceInfo().getPrice());
@@ -200,7 +208,7 @@ public class OrderData implements BUListener {
         return volumeComparator.thenComparing(priceComparator);
     }
 
-    public void updateMarketPrice(){
+    public void updateMarketPrice() {
         priceInfo.updateMarketPrice(productID);
     }
 
@@ -209,10 +217,10 @@ public class OrderData implements BUListener {
         scheduleHealthCheck();
     }
 
-    private void scheduleHealthCheck(){
+    private void scheduleHealthCheck() {
         long START_DELAY_SECONDS = 60;
         long CHECK_INTERVAL_SECONDS = 30;
-        BazaarUtils.BUExecutorService.scheduleAtFixedRate(() ->{
+        BazaarUtils.BUExecutorService.scheduleAtFixedRate(() -> {
                 if(!fixProductID()){
                    Util.notifyError("Could not fix product ID for " + name + ". This may cause the mod to work improperly.", null);
                 }
@@ -220,12 +228,12 @@ public class OrderData implements BUListener {
     }
 
     //returns true if productID is safe/fixed after run, and false if it is not
-    private boolean fixProductID(){
-        if(isProductIDHealthy()) {
+    private boolean fixProductID() {
+        if (isProductIDHealthy()) {
             return true;
         }
         String newProductID = BazaarData.findProductId(name);
-        if(newProductID == null){
+        if (newProductID == null) {
             Util.logError("While refinding product id, could not find product ID for " + name, null);
             return false;
         } else {
@@ -234,32 +242,37 @@ public class OrderData implements BUListener {
         }
     }
 
-    private boolean isProductIDHealthy(){
+    private boolean isProductIDHealthy() {
         return !(productID == null || productID.isEmpty() || BazaarData.findItemPrice(productID, priceInfo.getPriceType()) == null);
     }
 
-    public statuses getOutdatedStatus(){
+    public statuses getOutdatedStatus() {
         updateMarketPrice();
-        if(fillStatus == statuses.FILLED)
+        if (fillStatus == statuses.FILLED) {
             return statuses.FILLED;
-        if(priceInfo.getPrice().equals(priceInfo.getMarketPrice()) && tolerance == 0 && BazaarData.getOrderCount(productID, priceInfo.getPriceType(), priceInfo.getPrice()) > 1)
+        }
+        if (priceInfo.getPrice().equals(priceInfo.getMarketPrice()) && tolerance == 0 && BazaarData.getOrderCount(productID, priceInfo.getPriceType(), priceInfo.getPrice()) > 1) {
             return statuses.MATCHED;
+        }
 
         if (priceInfo.getPriceType() == OrderPriceInfo.priceTypes.INSTABUY) {
-            if(priceInfo.getPrice()- tolerance > priceInfo.getMarketPrice())
+            if (priceInfo.getPrice() - tolerance > priceInfo.getMarketPrice()) {
                 return statuses.OUTDATED;
-        } else if(priceInfo.getPriceType() == OrderPriceInfo.priceTypes.INSTASELL){
-            if(priceInfo.getPrice()+ tolerance < priceInfo.getMarketPrice())
+            }
+        } else if (priceInfo.getPriceType() == OrderPriceInfo.priceTypes.INSTASELL) {
+            if (priceInfo.getPrice() + tolerance < priceInfo.getMarketPrice()) {
                 return statuses.OUTDATED;
+            }
         }
 
         return statuses.COMPETITIVE;
     }
 
-    public double getFlipPrice(){
+    public double getFlipPrice() {
         updateMarketPrice();
-        if(priceInfo.getMarketOppositePrice() == 0)
+        if (priceInfo.getMarketOppositePrice() == 0) {
             return 0;
+        }
         if (priceInfo.getPriceType() == OrderPriceInfo.priceTypes.INSTABUY) {
             return (priceInfo.getMarketOppositePrice() + .1);
         } else {
@@ -267,14 +280,15 @@ public class OrderData implements BUListener {
         }
     }
 
-    public void setFilled(){
+    public void setFilled() {
         amountFilled = volume;
         fillStatus = statuses.FILLED;
     }
 
-    public void removeFromWatchedItems(){
-        if(!BUConfig.get().watchedOrders.remove(this))
+    public void removeFromWatchedItems() {
+        if (!BUConfig.get().watchedOrders.remove(this)) {
             PlayerActionUtil.notifyAll("Error removing " + name + " from watched items. Item couldn't be found.");
+        }
         BUConfig.HANDLER.save();
     }
 }
